--- a/.github/workflows/main_weather-forecast-func.yml
+++ b/.github/workflows/main_weather-forecast-func.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '/Api' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './Api' # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '7.*.*' # set this to the dotnet version to use
 
 jobs:
@@ -38,5 +38,5 @@ jobs:
         with:
           app-name: 'weather-forecast-func'
           slot-name: 'Production'
-          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
+          package: './output'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_815BD9C6725E49DD862DA8FC89F4E587 }}
